[metadata]
name = dasha
# version should be PEP440 compatible (https://www.python.org/dev/peps/pep-0440/)
version = 0.0.1
author = Zhiyuan Ma
author_email = zhiyuanma@umass.edu
description = A multi-page dash app with a set of plug-and-play page templates
long_description = DashA is a multi-page dash app that comes with a set of plug-and-play page templates
license = BSD 3-Clause
url = http://to.be.set
edit_on_github = False
github_project = toltec-astro/dasha
python_requires = ">=3.6"

[options]
# install_requires should be formatted as a semicolon-separated list, e.g.:
# install_requires = astropy; scipy; matplotlib
install_requires = wheel; astropy; pandas; Flask; dash; dash_spa; dash_bootstrap_components; dash_daq; cached_property; flask_sqlalchemy; flask_caching; flask_migrate; connexion[swagger-ui]; python-dotenv; celery[redis]; celery-redbeat; celery_once; flask-celeryext; mysqlclient; netCDF4;
zip_safe = False
use_2to3 = False

[options.package_data]
* = *.c
dasha = data/*
dasha.tests = coveragerc

[options.extras_require]
docs = sphinx-astropy

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 3.0
norecursedirs = build docs/_build
doctest_plus = enabled
addopts = -p no:warnings

[ah_bootstrap]
auto_use = True

[flake8]
exclude = extern,sphinx,*parsetab.py,astropy_helpers,ah_bootstrap.py,conftest.py,docs/conf.py,setup.py

[pycodestyle]
exclude = extern,sphinx,*parsetab.py,astropy_helpers,ah_bootstrap.py,conftest.py,docs/conf.py,setup.py
